fix(notificationdrawer/alert): improved title wrapping

--- a/src/patternfly/components/Alert/alert.scss
+++ b/src/patternfly/components/Alert/alert.scss
@@ -130,6 +130,7 @@
   grid-area: title;
   font-weight: var(--pf-c-alert__title--FontWeight);
   color: var(--pf-c-alert__title--Color);
+  word-break: break-word;
 }
 
 .pf-c-alert__description {
